Changes in @NEW@:
  o PostgreSQL support has been finalized and some SQL queries have
    been updated in the repository code for PostgreSQL compatibility

Changes in 1.0.34:
  o Client Changes:
    * You can now delete troves, update from changeset files, and
      update with a full version specified without an installLabelPath
      set. (CNY-281)
    * "conary rm" has been added as an alias for the "conary remove"
      command. (CNY-952)
    * Conary now produces an error message when an invalid context is
      specified. (CNY-890)
    * User settings in a context will override but not remove user
      settings from the main conary configuration file. (CNY-972)

  o Build (cvc) Changes:
    * "cvc cook --prep" now warns about missing dependencies instead
      of raising an error.  "cvc cook --download" does not warn or
      error. (CNY-787)
    * In a group recipe, if you use r.remove() to remove a component
      from a package in a group (which marks the component
      byDefault=False), and the package no longer contains any
      byDefault=True components, the package itself will also be made
      byDefault=False. This avoids installing packages with no
      components on the system. (CNY-774)
    * Previously, Java files that have no discoverable provided or
      required interfaces (for example, due to EAR dependencies)
      caused a traceback.  Conary now handles this case correctly and
      does not traceback.
    * Merging when the current version is already based on the parent
      version now gives an error message instead of writing out an
      incorrect CONARY file (CNY-968)

  o Bug Fixes:
    * Erases of critical troves is no longer considered a reason to
      restart Conary.
    * A bug triggered when a critical update of a trove depended on an
      erase has been fixed.
    * A bug that caused changesets to be invalidated from the
      changeset cache when signatures were not modified by
      setTroveSigs() has been fixed.